# tangleweave-studios-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  description.md  docker-compose.yml  readme.md  source_code.txt
.github/workflows/: deploy-prod.yml  deploy-test.yml  deploy.yml
app/client/: Cargo.toml
app/server/: Cargo.toml
backoffice/client/: Cargo.toml
backoffice/frontend/: .env  .env.production  Dockerfile  nginx.conf  openapi.yaml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backoffice/frontend/src/: App.tsx  main.tsx
backoffice/frontend/src/api/: index.ts  mockApi.ts
backoffice/frontend/src/api/core/: OpenAPI.ts
backoffice/frontend/src/api/models/: Order.ts  OrderInput.ts  OrdersList.ts  Product.ts  ProductInput.ts  ProductsList.ts  User.ts  UserInput.ts  UsersList.ts
backoffice/frontend/src/api/services/: OrdersService.ts  ProductsService.ts  UsersService.ts
backoffice/frontend/src/components/: DataTable.tsx  EditForm.tsx  Layout.tsx
backoffice/frontend/src/contexts/: AuthContext.tsx
backoffice/frontend/src/pages/: CallbackPage.tsx  LoginPage.tsx  OrdersPage.tsx  ProductsPage.tsx  UsersPage.tsx
backoffice/frontend/src/providers/: ApiProvider.tsx
backoffice/frontend/src/routes/: ProtectedRoute.tsx
backoffice/server/: Cargo.toml
backoffice/server/migrations/: 202602080001_create_users.sql  202602080002_create_payment_tables.sql
backoffice/server/src/: auth.rs  handlers.rs  main.rs  middleware.rs  models.rs
configs/: init.sql  kanidm.server.toml
env/: config.prod.toml  config.test.toml
infrastructure/: .env  .env.example  .env.local  .env.prod  .env.test  Dockerfile  docker-compose.yml  readme.md
infrastructure/nakama/modules/: analytics.ts  auth_rauthy.js  auth_rauthy.ts  progress.ts  readme.md
infrastructure/nginx/: nginx.conf
infrastructure/nginx/certs/: cert.pem  key.pem  readme.md
infrastructure/postgres/: init-databases.sh
infrastructure/rauthy/: config.local.toml  config.prod.toml
infrastructure/scripts/: init-sso.sh
nakama/: nakama.yml
nakama/modules/: analytics.js  auth_rauthy.ts  rewards.ts
nginx/: nginx.conf
nginx/certs/: cert.pem  key.pem
rauthy_bootstrap/: clients.json
shared/models/: Cargo.toml
shared/models/src/: lib.rs
shared/protocol/: Cargo.toml
shared/utils/: Cargo.toml
shared/utils/src/: time.rs
