[workspace]
members = [
    "shared/models",
    "shared/protocol",
    "shared/utils",
    "backoffice/client",
    "backoffice/server",
    "app/client",
    "app/server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }

# Web/Axum
axum = "0.8.8"
tower ="0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.28.0"
futures-util = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }

[profile.dev]
debug = true