[package]
name = "tangleweavestudios-backoffice-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tangleweavestudios-models = { path = "../../shared/models" }
tangleweavestudios-protocol = { path = "../../shared/protocol" }
tangleweavestudios-utils = { path = "../../shared/utils" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }

jsonwebtoken = "10"
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
