[package]
name = "tangleweavestudios-protocol"
version = "0.1.0"
edition = "2024"

[lib]
name = "tangleweavestudios_protocol"
path = "src/lib.rs"

[dependencies]
tangleweavestudios-models = { path = "../models" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }